# literature-review-assistant

./: .coveragerc  .env.example  .gitallowed  .gitignore  .overmind.env  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLEANUP_SUMMARY.md  CONTEXT.md  DEAD_CODE_ANALYSIS.md  DEVELOPMENT.md  MODERNIZATION_PLAN.md  MODERNIZATION_SUMMARY.md  Makefile  PR_SUMMARY.md  Procfile  Procfile.dev  README.md  REVIEW_FINDINGS.md  SAFE_REMOVALS.md  SKILL.md  TESTING_IMPROVEMENTS.md  WEEK1_QUICKSTART.md  coverage_report.txt  coverage_report_after.txt  ecosystem.config.example.js  ecosystem.dev.config.js  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  setup.sh  spec.md  test_casp_integration.py  vulture_report.txt
.cursor/agents/: backend-reliability.md  manuscript-auditor.md
.cursor/commands/: 0-session-bootstrap.md  1-update-cursor-rules.md  2-validate-docs.md  3-pre-commit-workflow.md  4-maintain-cursor-architecture.md  4-resume-drill-workflow.md  git-readme-cursor-rules.md  inception.md  plan-to-slices.md  pre-commit-workflow.md  update-cursor-rules.md  validate-docs.md
.cursor/docs/: API_CONTRACT.md  API_ENDPOINTS.md  ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  INDEX.md  LLM_AND_COSTS.md  PERSISTENCE.md  PIPELINE.md  UI_ARCHITECTURE.md
.cursor/skills/: README.md  lit-review
.github/workflows/: ci.yml  config-benchmark-gates.yml  manuscript-build.yml
config/: journals.yaml  review.yaml  review_gamification.yaml  settings.yaml  workflow-reference.yaml  workflow.yaml
data/cache/: search_cache.db
data/research/: gap_analysis.md  journal_requirements_matrix.md  published_paper_analysis.md
docs/: ADVANCED_FEATURES.md  ARCHITECTURE.md  CLEANUP_IMPLEMENTATION_PLAN.md  CLEANUP_SUMMARY.md  CONFIGURATION.md  Cursor Rules & Skills Strategy.md  Cursor-Rules-Skills-Commands-Reference.md  EXAMPLES.md  Holy Grail Build Specification.md  README.md  TEST_AND_SCRIPT_INVENTORY.md  TROUBLESHOOTING.md  bibliometric_testing_plan.md  frontend-spec.md  research-agent-v2-spec.md
docs/adr/: 0001-user-resumable-phases.md  0002-fulltext-bounded-context.md  0003-frontend-data-surfaces.md  0004-credential-resolution-contextvar.md
docs/dependency_analysis/: ANALYSIS_SUMMARY.md  EXECUTION_FLOW.md  PROJECT_STRUCTURE.md  dependency_diagram.mmd  workflow_architecture.mmd
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
reference/: telemedicine_benchmark_results.md  telemedicine_gold.json
reference-docs/: example-task-list.md
scripts/: analyze_dependencies.py  analyze_past_run_logs.py  analyze_test_structure.py  backfill_primary_study_status.py  benchmark.py  benchmark_config_generator.py  benchmark_model_routing_promptfoo.py  build_benchmark.py  check_broken_imports.py  check_regex_policy.py  check_replay_fixture_schema.py  check_spec_endpoint_parity.py  check_test_status.py  check_workflow_balance.py  check_workflow_progress.py  cleanup_project.py  com.parthchandak.litreview-healthwatch.plist  compare_primary_filter_delta.py  deploy_prod.sh  dryrun_screening_db_replay.py  finalize_manuscript.py  generate_ieee_readiness_report.py  generate_test_data.py  hermes-maintain.sh  inject_missing_citations.py  install_pm2_watchdog.sh  link-hermes-skill.sh  list_papers.py  local_ci.sh  migrate_to_runs.py  monitor_run_reliability.sh  organize_outputs.py  pm2_health_watchdog.sh  prototype_humanizer_checks.py  re_extract.py  record-llm-response.py  regenerate_figures.py  regenerate_replay_fixture.py  release_check.sh  run_e2e_tests.sh  (+36 more)
scripts/archive/: README.md  migrate_tests.py
skills/lit-review/: SKILL.md
src/: __init__.py  deduplication.py  main.py
src/agents/: __init__.py  base_llm_agent.py  base_writing_agent.py
src/citation/: __init__.py  ledger.py
src/db/: stats.py  (+7 more)
tests/: README.md  __init__.py  conftest.py  test_citation_registry.py
(+849 files in other folders)
