[project]
name = "research-article-writer"
version = "0.1.0"
description = "Systematic review automation tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "pydantic-ai>=1.0.0",
  "statsmodels>=0.14",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "rich>=13.0",
  "pyyaml>=6.0",
  "aiohttp>=3.9",
  "certifi>=2024.0",
  "biopython>=1.83",
  "arxiv>=2.0",
  "scikit-learn>=1.3",
  "thefuzz>=0.22",
  "aiosqlite>=0.21",
  "python-dotenv>=1.0",
  "structlog>=24.0",
  "prisma-flow-diagram>=0.1.0",
  "colrev>=0.16.0",
  "fastapi>=0.129.0",
  "uvicorn[standard]>=0.40.0",
  "sse-starlette>=3.2.0",
  "bm25s>=0.2",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
