[project]
name = "research-article-writer"
version = "0.1.0"
description = "Systematic review automation tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "pydantic-ai>=1.0.0",
  "statsmodels>=0.14",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "rich>=13.0",
  "pyyaml>=6.0",
  "aiohttp>=3.9",
  "certifi>=2024.0",
  "biopython>=1.83",
  "arxiv>=2.0",
  "scikit-learn>=1.3",
  "thefuzz>=0.22",
  "aiosqlite>=0.21",
  "python-dotenv>=1.0",
  "structlog>=24.0",
  "prisma-flow-diagram>=0.1.0",
  "colrev>=0.16.0",
  "fastapi>=0.129.0",
  "uvicorn[standard]>=0.40.0",
  "sse-starlette>=3.2.0",
  "bm25s>=0.2",
  "nameparser>=1.1",
  "wordfreq>=3.0",
  "watchfiles>=1.1.1",
  "aiofiles>=25.1.0",
  "pypandoc-binary>=1.16.2",
  "weasyprint>=62.0",
  "python-docx>=1.2.0",
  "pymupdf4llm>=0.0.17",
  "datasketch>=1.9.0",
  "graphviz>=0.21",
  "sqlite-vec>=0.1.6",
  "networkx>=3.0",
  "python-louvain>=0.16",
  "nltk>=3.9.3",
  "genai-prices>=0.0.55",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E501: line-too-long -- codebase uses 120-char lines throughout; reformatting all is out of scope
# UP042: StrEnum -- converting str+Enum to StrEnum is a refactor beyond a lint pass; kept for now
ignore = ["E501", "UP042", "UP045"]

[tool.ruff.lint.per-file-ignores]
# Scripts do sys.path manipulation before imports (standard pattern for standalone scripts)
"scripts/*.py" = ["E402"]
# These modules set up logging early before imports (intentional early-logger pattern)
"src/orchestration/*.py" = ["E402"]
"src/screening/dual_screener.py" = ["E402"]
"src/search/strategy.py" = ["E402"]
"src/writing/section_writer.py" = ["E402"]
# Tests commonly assign results without reading them to assert "no exception raised"
"tests/**/*.py" = ["F841", "E741"]
